crates/djls-python/tests/snapshots/corpus__extraction_snapshots@packages__Django__6.0.2__django__contrib__admin__templatetags__admin_modify.py.snap
---
source: crates/djls-python/tests/corpus.rs
expression: snapshot(result)
input_file: crates/djls-corpus/.corpus/packages/Django/6.0.2/django/contrib/admin/templatetags/admin_modify.py
---
tag_rules: {}
filter_arities:
  "django.contrib.admin.templatetags.admin_modify::filter::cell_count":
    expects_arg: false
    arg_optional: false
block_specs: {}
